<resources>
    <string name="app_name">pegeluaran</string>
    <string name="perhitungan_intro">Aplikasi ini memberitahu pengeluaran anda selama 1 bulan, anda apakah anda termasuk orang yang boros atua tidak, Cobalah sekarang !</string>
    <string name="penjelasan">Masukan jumlah uang yang anda dapatkan, lalu masukan pengeluaran anda dalam sebulan, aplikasi akan otomatis menghitung / memberi tahu apakah anda dalam sebulan ini boros atau tidak </string>
    <string name="pemasukan_uang">Pemasukan_uang</string>
    <string name="pengeluaran_uang">pengeluaran_uang_sebulan</string>
    <string name="jenis_mata_uang">banyak_hari_pengeluaran</string>
    <string name="dollar">30 hari</string>
    <string name="rupiah">15 hari</string>
    <string name="hitung">hitung</string>
    <string name="bmi_x">Jumlah: %1$.2f</string>
    <string name="Hemat">Hemat</string>
    <string name="ideal">Ideal</string>
    <string name="Boros">Boros</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="pemasukan_invalid">Pemasukan tidak boleh kosong.</string>
    <string name="pengeluaran_invalid">Pengeluaran tidak boleh kosong.</string>
    <string name="matauang_invalid">Pilih jenis mata uang.</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data otomatis</string>
    <string name="notif_title">Ada update baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>